fix: home page h1 alignement

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -1,6 +1,9 @@
 h1 {
     font-size: 72px;
     color: var(--text);
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
 h1 > svg {
